# Fortress-api

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GIT_COMMIT_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yaml  index.html  init-db.sql  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: todos.py
app/core/: config.py  lifespan.py  logging.py  metrics.py  tracing.py
app/domain/todo/: models.py  schemas.py
app/infrastructure/: database.py  db.py  redis.py
app/infrastructure/repositories/: todo_repository.py
app/services/: todo_service.py
grafana/dashboards/: todo-api-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
tests/: conftest.py  test_bug_fixes.py  test_main.py  test_todos.py
